--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "hugo-theme-itheme"]
-	path = hugo-theme-itheme
+[submodule "themes/hugo-theme-itheme"]
+	path = themes/hugo-theme-itheme
 	url = https://github.com/floyd-li/hugo-theme-itheme.git
