--- a/.github/workflows/update-theme.yml
+++ b/.github/workflows/update-theme.yml
@@ -21,5 +21,5 @@ jobs:
       run: |
         git config --global user.name github-actions
         git config --global user.email github-actions@github.com
-        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-        git commit -am "Auto updated submodule references" && git push || echo "No changes to commit"
+        git add --all
+        git commit -m "Update submodules" && git push || echo "No changes to commit"
