--- a/.github/workflows/update-theme.yml
+++ b/.github/workflows/update-theme.yml
@@ -10,6 +10,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
         submodules: true
 
     - name: Git Sumbodule Update
