--- a/.github/workflows/update-theme.yml
+++ b/.github/workflows/update-theme.yml
@@ -23,10 +23,4 @@ jobs:
         git config --global user.name github-actions
         git config --global user.email github-actions@github.com
         git add --all
-        git commit -m "Update submodules" || echo "No changes to commit"
-
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: main
+        git commit -m "Update theme automatically" && git push|| echo "No changes to commit"
