chore: update demo data

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = 'en'
 defaultContentLanguage = "en"
 hasCJKLanguage = true
 enableEmoji = true
-title = 'Apple Newsroom'
+title = 'iTheme'
 copyright = 'Floyd Li'
 theme = 'hugo-theme-itheme'
 paginate = 5
