--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ paginate = 5
   defaultCover = 'https://images.unsplash.com/photo-1579546929518-9e396f3cc809?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'
   email = 'yongtae@kaist.ac.kr'
   [params.algolia] # Algolia search configuration
-    enabled = true # enable Algolia search
+    enabled = false # enable Algolia search
     appId = 'YCXSYQ2QQN' # appid for Algolia search
     appKey = 'f21c496f9dee1bce2a76b7415eefc319' # appkey for Algolia search
     searchIndex = 'tate_kim' # index for Algolia search
